End of the day commit
I need to read more about Watch Service API before I can continue :(

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ nbproject/genfiles.properties
 nbproject/project.properties
 
 nbproject/project.xml
+
+lib/edtftpj.jar
+
+lib/junit.jar
+
+lib/readme-edtftpj.html
