--- a/wwconf.xml.sample
+++ b/wwconf.xml.sample
@@ -7,7 +7,8 @@
 		<port></port>
 	</ftp>
 	<dir>
-		<uri></uri>
+		<local-path></local-path>
+		<remote-path></remote-path>
 		<ignore>
 			<file></file>
 		</ignore>
